--- a/css/style.css
+++ b/css/style.css
@@ -233,6 +233,10 @@
 		padding-top: 15px;
 		padding-block-end: 25px;
 	}
+	.grid_44 {
+		width: 360px;
+		float: right;
+	}
 
 	
 	
@@ -372,6 +376,28 @@
 			padding-bottom: 8px;
 			padding-top: 6px;
 		}
+				
+		ul.list li.fb {
+			background: url(../images/fb.png) no-repeat left 7px;
+			padding-left: 35px;
+			padding-bottom: 8px;
+			padding-top: 6px;
+		}	
+		
+		ul.list li.In {
+			background: url(../images/In.png) no-repeat left 7px;
+			padding-left: 35px;
+			padding-bottom: 8px;
+			padding-top: 6px;
+		}	
+		
+		ul.list li.sk {
+			background: url(../images/sk.png) no-repeat left 5px;
+			padding-left: 35px;
+			padding-bottom: 8px;
+			padding-top: 6px;
+		}
+		
 		ul.list2 li.social {
 			list-style-type: none;
 			
@@ -768,8 +794,3 @@
 		color: #505050;
 		text-align: justify;
 	}
-	
-	
-
-	
-	
