--- a/css/style.css
+++ b/css/style.css
@@ -6,11 +6,15 @@
 	}
 	
 	.theme-color, span.theme-color  {
-		color: #96a760;
+		color: #6083a7;
 	}
 	
+	.theme-color2, span.theme-color2  {
+		color: #71ADEB;
+	}
+		
 	a {
-		color: #96a760;
+		color: #6083a7;
 	}	
 	a:hover {
 		text-decoration: underline;
@@ -795,7 +799,22 @@
 		text-align: justify;
 	}
 	
-	
+	.download-cv-btn {
+	display: block;
+    margin: 0 auto;
+    width: 150px;
+    height: 36px;
+    line-height: 36px;
+    text-align: center;
+    background-color: #6083a7;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 3px;
+    font-weight: bold;
+    font-size: 16px;
+    border: none;
+    margin-top: 20px;
+}
 
 	
 	
